# superious

./: .env  .eslintrc.json  .gitignore  AUDIT_REPORT.md  ENGINEERING_AUDIT.md  README.md  gemini.md  image-hosts.config.mjs  index.html  next.config.mjs  options.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  desktop-build.yml  main.yml  release-desktop.yml
architecture/: gpt.md
architecture/audit/: mistakes.md
architecture/chat_design/: designlaw.md  steps.md  uibehaviour.md
architecture/tool/: codebase-audit.md  tool-infrastructure.md
docs/: GOOGLE_GEMINI_MODELS.md  PROPOSED_FEATURES.md  changelog.md  claude.md  desktop-pivot-playbook.md  gemini.md  migration-analysis-report.md  project-audit.md
docs/backend/: README.md  agent-workflow.md  api-design.md  data-models.md  database-schema.md  screenshot-service.md  security-ops.md  strategy.md  worker-services.md
docs/suggestions/: gpt.md  rehaul.md  updates.md
scripts/: desktop-build-next.mjs  prepare-sidecar.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bootstrap/: index.html
src-tauri/capabilities/: default.json
src-tauri/sidecar/: start-sidecar.js
src-tauri/src/: lib.rs
src/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/brain/: index.ts
src/components/: AppLayout.tsx  ColorManager.tsx  NotificationModal.tsx  Sidebar.tsx  ThemeSwitcher.tsx  UpdaterManager.tsx  ZoomManager.tsx
src/lib/: api-keys-store.ts  crypto.ts  motion-design.ts  providers.ts  (+5 more)
tests/: crypto.test.ts  providers.test.ts
(+154 files in other folders)
