[package]
name = "outlier-desktop"
version = "0.1.0"
description = "Outlier desktop shell"
authors = ["Outlier Team"]
license = "MIT"
repository = "https://github.com/nbuvhvj8/superious"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
once_cell = "1.19"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
